--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
     <section>
         <article><h1>Carp</h1><p>An IRC Library for Node.js</p>
-<h2>Example usage</h2><pre class="prettyprint source lang-javascript"><code>const Carp = require(&quot;carp-irc&quot;)
+<h2>Install</h2>Install with <code>npm install carpjs</code>
+<h2>Example usage</h2><pre class="prettyprint source lang-javascript"><code>const Carp = require(&quot;carpjs&quot;)
 const Client = new Carp.Client({
     username: &quot;MyClient&quot;
 })
